--- a/GL.ProjectManagement.UI/GL-ProjectManagement-UI/src/app/login/login.component.html
+++ b/GL.ProjectManagement.UI/GL-ProjectManagement-UI/src/app/login/login.component.html
@@ -1,28 +1,42 @@
-<div class="col-md-6 offset-md-3 mt-5">  
-    <div class="card">
-        <h4 class="card-header">GL Project Management</h4>
-        <div class="card-body">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                        <div *ngIf="f.email.errors.required">Email is required</div>
+<div>
+    
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    </div>
+    
+    <div class="col-md-6 offset-md-5 mt-5">  
+        <div class="card" style="width: fit-content;">
+            <h4 class="card-header">GL Project Management</h4>
+            <div class="card-body">
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" formControlName="email" class="form-control"  ngModel email="true" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                            <div *ngIf="f.email.errors.required">Email is required</div>
+                            <div *ngIf="f.email.errors.email">Please enter Valid Email ID </div>
+                        </div>
+                        
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
+    
+                    <div class="row" style="height: 20px;"></div>
+    
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                            <div *ngIf="f.password.errors.required">Password is required</div>
+                        </div>
                     </div>
-                </div>
-                <button   class="btn btn-primary">
-                    <span *ngIf="loading"  class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
-                </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
-            </form>
+                    <div class="row" style="height: 30px;"></div>
+                    <button   class="btn btn-primary">
+                        <span *ngIf="loading"  class="spinner-border spinner-border-sm mr-1"></span>
+                        Login
+                    </button>
+                    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
