--- a/GL.ProjectManagement.UI/GL-ProjectManagement-UI/src/app/featureModules/user/add-edit-user/add-edit-user.component.html
+++ b/GL.ProjectManagement.UI/GL-ProjectManagement-UI/src/app/featureModules/user/add-edit-user/add-edit-user.component.html
@@ -57,9 +57,10 @@
                 <label for="email">Email</label> 
             </div>
             <div class="col-md-3">
-                <input type="email" class="form-control" formControlName="email" id="email" [(ngModel)]="user.email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                <input type="email" class="form-control" formControlName="email" id="email" ngModel email="true" [(ngModel)]="user.email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
                 <div *ngIf="submitted && f.email.errors" class="invalid-feedback" style="background-color:black;" >
                     <div *ngIf="f.email.errors.required">Email is required</div>
+                    <div *ngIf="f.email.errors.email">Please enter Valid Email ID </div>
                 </div>
             </div>
         </div>
@@ -72,7 +73,7 @@
                 <label for="password">Password</label> 
             </div>
             <div class="col-md-3">
-                <input type="password"  formControlName="password" class="form-control" id="password" 
+                <input type="password"  formControlName="password" class="form-control" id="password" [(ngModel)]="user.password"
                 [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback" style="background-color:black;" >
                     <div *ngIf="f.password.errors.required">Password is required</div>
